[package]
name = "moltlaunch"
version = "0.1.0"
description = "MoltLaunch - Solana Agent Validation Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moltlaunch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
blake3 = "=1.5.5"
