[package]
name = "moltlaunch"
version = "0.1.0"
description = "MoltLaunch V3 — Composable Signal Architecture for AI Agent Identity"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moltlaunch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
